client/one/less/style.less
/* ... */
.graph-infobox-row {
	display: table-row;
}

.graph-container {
	display: table-cell;
	width: 100%;
	vertical-align: top;
}

.graph-container-short {
    display: table-cell;
    width: 100%;
}

.graph-container-long {
    display: table-cell;
    width: 100%;
}

.infobox-container {
	display: table-cell;
	width: 350px;
}

.infobox-container-full {
    display: inline-block;
    width: 28%;
    margin-left: 2%;
    position: absolute;
    height: 100%;
    overflow: auto;
    display: visible;
    background: #f6f6f6;
    font-size: 13px;
}

.infobox-container-short {
    display: none;
}

/**
 * Default internal-feature style for header buttons
 */
.header-button-internal() {
    &:before {
        content: " ";
        position: absolute;
        top: -4px;
        left: -4px;
        width: 0;
        height: 0;
        display: block;
        border-top: 8px solid @internal-color;
        border-right: 8px solid transparent;
    }
}

.infobox-button {
    margin-right: 5px;
    position: relative;

    .internal {
        .header-button-internal;
    }
}

.infobox-background {
    background: #f6f6f6;
}

.infobox-wrapper {
	display: block;
	overflow-x: hidden;
	overflow-y: scroll;
	max-height: 300px;

}

.infobox-adgroup {
    .infobox-setting-label {
        width: 34%;
        max-width: 120px;
    }
}

.infobox-account {
    .infobox-setting-label {
        width: 30%;
        max-width: 120px;
    }

    .infobox-status {
        vertical-align: top;
        height: 40px;
    }
}

.graph-button-image {
    width: 30px;
    height: 18px;
    vertical-align: middle;
    padding-bottom: 4px;
}

.infobox-campaign {
    .infobox-setting-label {
        width: 30%;
        max-width: 125px;
    }
}

.infobox-all-accounts {
    .infobox-setting-label {
        width: 45%;
        max-width: 185px;
    }

    .infobox-setting-value-container {
        width: 50%;
    }
}

.infobox {
    padding: 10px;

    color: @infobox-black;

    hr {
        border-top: 1px solid #dddddd;
        margin: 10px -10px;
    }
}

.infobox-active-circle-icon-gray {
    .state-icon-placeholder();
    background-image: url('img/active_circle_icon_gray.svg');
    height: 14px;
    line-height: 34px;
    background-position: center center;
    background-size: 43px auto;
    width: 14px;
}

.infobox-status {
    text-align:right;
    display: inline-block;
    min-width: 20px;
    vertical-align: top;
    margin-left: 0px;
    vertical-align: middle;
    margin-top: -4px;
}

.infobox-header {
    display: block;
    width: 100%;
    white-space: nowrap;
    overflow: visible;
    height: 34px;
}

.infobox-header-wo-subtitle {
    height: 34px;
    line-height: 38px;
}

.infobox-title {
    color: @infobox-black;
    font-size: 18px;
    font-weight: 600;
    line-height: 20px;
}

.infobox-icon {
    width: 13px;
    height: 13px;
    left: 0;
    margin-bottom: 0;
    position: absolute;
    top: 2px;
}

.infobox-subtitle {
    color: @infobox-black;
    font-size: 13px;
}

.infobox-setting {
    overflow: hidden;
}

.infobox-setting-value-container {
    display: inline-block;
    width: 68%;
    vertical-align: top;
    line-height: 16px;
}

.infobox-setting-label {
    width: 30%;
    overflow: hidden;
    display: inline-block;
    color: @infobox-gray;
    line-height: 16px;
    vertical-align: top;
}

.infobox-setting-value {
    display: inline;
    vertical-align: top;
    color: #454545;
    font-weight: normal;
}

.infobox-setting-value-comment {
    display: inline;
    vertical-align: top;
    margin-left: 5px;
    color: @infobox-gray;
}

.infobox-setting-icon {
    display: inline-block;
    padding-left: 16px;
    position: relative;
    vertical-align: top;
}

.infobox-details-link {
    cursor: pointer;
}

.infobox-setting-info {
    display: inline-block;
    vertical-align: top;
}

.infobox-setting-info-dropped {
    display: inline-block;
    word-break: break-all;
}

.infobox-setting-info-dropped-content {
    background: white;
    padding: 10px;
    border: 1px solid @infobox-gray;
    margin: 5px 0px
}

.infobox-setting-section-start {
    padding-top: 10px
}

.chart-hidden {
    display: none;
}

.table-name-hidden {
    display: none;
}
/* ... */

